# face_ncnn

./: README.md  build.gradle  settings.gradle
FaceDetect/: .gitignore  CMakeLists.txt  build.gradle
FaceDetect/includes/ncnn/: platform.h
FaceDetect/src/main/: AndroidManifest.xml
FaceDetect/src/main/cpp/: mtcnn.cpp  mtcnn.h  mtcnn_gpu.cpp  mtcnn_gpu.h  mtcnn_gpu_jni.cpp  mtcnn_jni.cpp
FaceDetect/src/main/java/com/zl/face/: FaceInfo.java  MTCNN.java  MTCNNGPU.java
FaceLibrary/: .gitignore  CMakeLists.txt  build.gradle
FaceLibrary/src/main/: AndroidManifest.xml
FaceLibrary/src/main/cpp/: base_util.cpp  base_util.h  face_jni.cpp  mobile_facenet.cpp  mobile_facenet.h  ndk_util.h  ultra_face.cpp  ultra_face.h
FaceLibrary/src/main/java/com/zl/face/: FaceDetector.java  FaceInfo.java
FaceLibrary/src/test/java/com/zl/face/: ExampleUnitTest.java
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/zl/demo/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/zl/ncnn/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: mobilefacenet.cpp  mobilefacenet.h  mtcnn.cpp  mtcnn.h  mtcnn_jni.cpp
app/src/main/cpp/include/: layer_type_enum.h
app/src/main/java/com/zl/demo/: CameraActivity.java  CameraPreView.java  FaceRectView.java  ImageUtil.java  MainActivity.java  YUVUtil.java
app/src/main/java/com/zl/ncnn/: CameraActivity.java  CameraPreView.java  FaceInfo.java  FaceRectView.java  ImageUtil.java  MTCNN.java  MainActivity.java  YUVUtil.java
app/src/main/res/layout/: activity_camera.xml  activity_main.xml
app/src/main/res/values/: attrs.xml  strings.xml
app/src/test/java/com/zl/demo/: ExampleUnitTest.java
app/src/test/java/com/zl/ncnn/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
src/main/java/com/zl/aliyun/iot/: IotApi.java  SignatureUtils.java  UrlUtil.java
src/main/java/com/zl/aliyun/nls/: CreateToekn.java  NlsToken.java  NlsTokenResponse.java  TokenListener.java  TokenUtil.java
src/main/java/com/zl/aliyun/util/: Base64Encoder.java  DateUtil.java  JsonUtil.java  SignUtil.java  StringUtil.java  UrlUtil.java
src/main/java/com/zl/aliyun/util/http/: ByteContentFile.java  FileContentFile.java  HttpCallBack.java  HttpUtil.java
src/test/java/com/zl/demo/nls/: NLSDemo.java
